--- a/src/conponents/todoItem.scss
+++ b/src/conponents/todoItem.scss
@@ -28,3 +28,13 @@
   background-color: white;
   text-align: left !important;
 }
+
+@media only screen and (max-width: 959.5px) {
+  .item {
+    width: 750px;
+    flex: 1 1 auto;
+  }
+  .input-group-text {
+    width: 750px;
+  }
+}
