--- a/src/layouts/Footer.scss
+++ b/src/layouts/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #141414;
+  background-image: url(../assents/images/Todolist-Image.jpg);
 }
 .footer h2 {
   line-height: 60px;
