--- a/src/conponents/todoItem.scss
+++ b/src/conponents/todoItem.scss
@@ -1,40 +1,104 @@
+.todoItem:first-child {
+  margin-top: 0.5rem;
+}
+
 .todoItem {
   margin-bottom: 0.7rem;
-  &__input {
-    display: flex;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 118, 20, 0.4) 0%,
+    rgba(255, 84, 17, 0.4) 100%
+  );
+  border-radius: 3px;
+  &__child {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    &__content {
+      font-weight: 450;
+      max-width: 400px;
+      word-break: break-all;
+      align-items: center;
+      display: flex;
+      padding-left: 0.5rem;
+    }
+    &__content div {
+      font-size: 20px;
+    }
+    &__icon {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 3px;
+    }
+    &__icon svg:first-child {
+      border: 2px solid #141414;
+      border-radius: 30px;
+    }
+    &__icon svg {
+      height: 35px;
+      width: 35px;
+      padding: 2px;
+      margin: 5px 15px;
+    }
   }
-
-  &__item {
-    margin-bottom: 0.5rem;
-  }
 }
-.todoItem Button {
-  font-size: 12px;
-  width: 60px;
-  border-left: 2px solid #141414;
+.todoItem:nth-child(6n + 1) {
+  background: linear-gradient(
+    90deg,
+    rgba(93, 12, 255, 0.4) 0%,
+    rgba(155, 0, 250, 0.4) 100%
+  );
 }
-
-.item {
-  width: 350px !important;
-}
-.input-group-text {
-  display: block !important;
-  word-wrap: break-word;
-  white-space: normal !important;
-  width: 350px;
+.todoItem:nth-child(6n + 2) {
+  background: linear-gradient(
+    90deg,
+    rgba(255, 12, 241, 0.4) 0%,
+    rgba(250, 0, 135, 0.4) 100%
+  );
 }
 
-.item span {
-  background-color: white;
-  text-align: left !important;
+.todoItem:nth-child(6n + 3) {
+  background: linear-gradient(
+    90deg,
+    rgba(20, 159, 255, 0.4) 0%,
+    rgba(17, 122, 255, 0.4) 100%
+  );
+}
+.todoItem:nth-child(6n + 4) {
+  background: linear-gradient(
+    90deg,
+    rgba(189, 37, 176, 0.4) 0%,
+    rgba(189, 37, 176, 0.4) 100%
+  );
+}
+.todoItem:nth-child(6n + 5) {
+  background: linear-gradient(
+    90deg,
+    rgba(192, 175, 20, 0.4) 0%,
+    rgba(192, 175, 20, 0.4) 100%
+  );
+}
+.todoItem svg:hover {
+  transition: all 0.3s ease-in-out;
+  transform: scale(1.3);
+}
+.completed__button {
+  color: rgb(6, 248, 6);
+  box-shadow: 0px 0px 10px rgb(6, 248, 6);
+  border-radius: 30px;
+  border: 2px solid rgb(6, 248, 6) !important;
+  opacity: 1 !important;
+}
+.completed__content {
+  text-decoration: line-through;
+  color: #868686;
 }
 
 @media only screen and (max-width: 959.5px) {
-  .item {
-    width: 750px;
-    flex: 1 1 auto;
-  }
-  .input-group-text {
-    width: 750px;
+  .todoItem {
+    &__child {
+      grid-template-columns: 6fr 1fr;
+    }
   }
 }
