--- a/src/screens/TodoScreen.scss
+++ b/src/screens/TodoScreen.scss
@@ -1,63 +1,50 @@
 .todolist {
-  display: grid;
-  grid-template-columns: 1fr 1.4fr;
-  padding-bottom: 3rem;
-
-  &__left {
-    margin: 0rem 1rem;
-    &__scroll {
-      max-width: 352px;
-      max-height: 180px;
-      overflow-y: scroll;
-    }
+  margin: auto !important;
+  position: relative;
+  max-height: 450px;
+  box-shadow: 1px 1px 5px #141414;
+  border-radius: 2px;
+  padding: 1rem 1rem 3rem 1rem;
+  max-width: 100%;
+  &__title {
+    position: absolute;
+    top: -160px;
+    width: 100%;
+    font-size: 80px;
+    font-weight: 600;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: "Abril Fatface", cursive;
   }
-  &__left div li:last-child {
-    padding-bottom: 1rem;
-  }
-  &__left li {
-    list-style-type: disclosure-closed;
-    margin: 0rem 1rem;
-    word-break: break-all;
-  }
-  &__left li:hover {
-    cursor: pointer;
-  }
-  &__left > div:first-child {
-    box-shadow: 1px 1px 5px #141414;
-    border-radius: 2px;
+  &__active {
+    display: flex;
+    justify-content: flex-end;
+    list-style-type: none;
     margin-bottom: 1rem;
   }
-  &__left > div:last-child {
-    box-shadow: 1px 1px 5px #141414;
-    border-radius: 2px;
-  }
-  &__left h5 {
-    padding: 1rem;
+  &__active li {
+    cursor: pointer;
+    width: 90px;
     text-align: center;
-    border-bottom: 1px solid #141414;
   }
-
-  &__right {
-    box-shadow: 1px 1px 5px #141414;
-    border-radius: 2px;
-    padding: 1rem;
-    margin: 0rem 1rem;
-    max-width: 544px;
-    &__item {
-      margin-top: 1rem;
-      &__scroll {
-        max-height: 300px;
-        overflow-y: scroll;
-      }
-      &__qty {
-        margin-bottom: 1rem;
-      }
-    }
+  &__item {
+    max-height: 300px;
+    overflow-y: scroll;
   }
 }
-.active {
+.activescreen {
   font-weight: bold;
+  color: rgb(120, 120, 120);
+  transition: all 0.8 ease-in-out;
+  border-bottom: 5px solid rgb(120, 120, 120);
 }
+.activescreen > span {
+  border-left: 1px solid rgb(120, 120, 120);
+  border-right: 1px solid rgb(120, 120, 120);
+  border-radius: 10px;
+  padding: 0px 3px;
+}
+
 .status {
   text-align: right;
 }
